test: add Anvil Drop tests